@@ -118,7 +118,7 @@ const _PyUnicode_TypeRecord _PyUnicode_TypeRecords[] = {
     {0, 0, 0, 0, 7, 4},
     {0, 0, 0, 0, 8, 4},
     {0, 0, 0, 0, 9, 4},
-    {42877, 0, 42877, 0, 0, 265},
+    {42877, 7545, 42877, 0, 0, 265},
     {3814, 0, 3814, 0, 0, 9},
     {65477, 0, 65477, 0, 0, 9},
     {0, 57921, 0, 0, 0, 129},
@@ -159,7 +159,7 @@ const _PyUnicode_TypeRecord _PyUnicode_TypeRecords[] = {
     {0, 54787, 0, 0, 0, 129},
     {0, 54753, 0, 0, 0, 129},
     {58272, 0, 58272, 0, 0, 9},
-    {0, 7545, 0, 0, 0, 385},
+    {42877, 7545, 42877, 0, 0, 385},
     {0, 40, 0, 0, 0, 129},
     {65496, 0, 65496, 0, 0, 9},
 };
